fixes navbar and menus in responsive mode. Adjusts how the autocomplete menu displays so that it doesn't obscure the input field. Minor tweaks for alignment of the navbar and non-rounded edges for the menus.

--- a/css/monarch-common.css
+++ b/css/monarch-common.css
@@ -73,7 +73,7 @@ p.bigfont {
 #navbar .navbar { padding: 3px;}
 
 
-#navbar .navbar .dropdown-menu {
+#navbar .navbar-nav .dropdown-menu {
   border-radius: 0;
   box-shadow: none;
 }
@@ -101,7 +101,6 @@ p.bigfont {
 }
 
 #navbar .nav-search-btn {
-    font-weight:500;
     padding: 0px 10px;
     font-weight:500;
     width:40px;
@@ -110,9 +109,10 @@ p.bigfont {
     margin-left:-3px;
 }
 
-#xnavbar .monarch-navbar-container {
-    padding: 0px 10px;
+#navbar .monarch-navbar-container {
+    background-color: #222; /* @navbar-inverse-bg */
 }
+
 #navbar.navbar {
     min-height: 36px;
     max-height: 36px;
@@ -149,14 +149,23 @@ p.bigfont {
 
 
 @media (max-width: 925px) {
-    #search {
-        margin-left: 0 !important;
-        margin-right: 5px;
+    #navbar .collapse.in #feedback-trigger {
+        margin:2px 0 6px -3px;
+    }
+
+    #navbar #search {
+        width:250px;
+        margin:5px 0 5px 15px;
+    }
+
+    #navbar .nav-search-btn {
+        margin:5px 0 0 5px;
     }
 
     #collapsed-navbar {
-        background-color: black;
+        background-color: #222; /* @navbar-inverse-bg */
         height:100%;
+        padding:1px;
     }
 
     .navbar-brand {
@@ -178,18 +187,27 @@ p.bigfont {
     .navbar-collapse {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        background-color: #222; /* @navbar-inverse-bg */
     }
     .navbar-fixed-top {
         top: 0;
         border-width: 0 0 1px;
     }
+
     .navbar-collapse.collapse {
         display: none!important;
     }
     .navbar-nav {
         float: none!important;
-        margin-top: 7.5px;
-        background-color: black !important;
+        background-color: transparent !important;
+        margin: 0 5px 0 5px;
+    }
+    .navbar .navbar-right.navbar-form {
+        margin: 0;
+    }
+    .navbar .navbar-right.navbar-form#search_form {
+        border: none;
+        margin: 0;
     }
     .navbar-nav>li {
         float: none;
@@ -200,6 +218,7 @@ p.bigfont {
     }
     .collapse.in{
         display:block !important;
+      overflow: visible;
     }
    .navbar-nav .open .dropdown-menu {
        position: static;
@@ -1007,7 +1026,7 @@ a:hover .hilite, a:active .hilite {
     border:1px solid transparent;
     background-color: #222;
     color: #43A395;
-    font-weight: 400;
+    font-weight: 500;
 }
 #navbar #feedback-trigger:hover {
     color: #FFF;
